--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,12 @@
 {
-    "/css/compiled/common.css": "/css/compiled/common.css?id=4e8515b348ebc9d75586",
-    "/js/compiled/common.js": "/js/compiled/common.js?id=80e35dc13c64230bb20e",
+    "/css/compiled/common.css": "/css/compiled/common.css?id=b9dd3df156287831bed3",
+    "/css/compiled/post.css": "/css/compiled/post.css?id=ca7605c679c9750a17c1",
+    "/js/compiled/common.js": "/js/compiled/common.js?id=15bfb972523c8db5ca8a",
     "/js/compiled/index.js": "/js/compiled/index.js?id=91614f0b6285fbf07065",
+    "/js/compiled/post.js": "/js/compiled/post.js?id=0ee37fe304f440e35485",
     "/js/compiled/raid_stats.js": "/js/compiled/raid_stats.js?id=9cf626b9e4716674d46c",
-    "/js/compiled/weapon_stats.js": "/js/compiled/weapon_stats.js?id=2c5fad541ce6b4798fa1",
-    "/js/compiled/pve_stats.js": "/js/compiled/pve_stats.js?id=cbbefbe7255600181ac8",
-    "/js/compiled/pvp_stats.js": "/js/compiled/pvp_stats.js?id=15978890e79d7c1562e2",
-    "/js/compiled/gambit_stats.js": "/js/compiled/gambit_stats.js?id=a482fc65320296262704"
+    "/js/compiled/weapon_stats.js": "/js/compiled/weapon_stats.js?id=3c4c4c53dbd91d2a3157",
+    "/js/compiled/pve_stats.js": "/js/compiled/pve_stats.js?id=b89ead87937e31a130b9",
+    "/js/compiled/pvp_stats.js": "/js/compiled/pvp_stats.js?id=878bb0f925d9a83605ca",
+    "/js/compiled/gambit_stats.js": "/js/compiled/gambit_stats.js?id=abc26f25d21c24a1eac0"
 }
