--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "nesbot/carbon": "^2.18",
         "predis/predis": "^1.1",
         "spatie/laravel-sitemap": "^5.3",
+        "stripe/stripe-php": "^6.37",
         "thunderer/shortcode": "^0.6.5"
     },
     "require-dev": {
