--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,13 @@
 {
-    "/css/compiled/common.css": "/css/compiled/common.css?id=f74d9ae1dc6900d9c897",
+    "/css/compiled/common.css": "/css/compiled/common.css?id=583378a1aad1bc870f9a",
     "/css/compiled/post.css": "/css/compiled/post.css?id=4002dbcd64c42ee1508f",
-    "/js/compiled/common.js": "/js/compiled/common.js?id=26e5ff7afa696e324485",
-    "/js/compiled/index.js": "/js/compiled/index.js?id=e26f02638ab2e9d7ae5b",
+    "/css/compiled/store.css": "/css/compiled/store.css?id=e87f4df40421c5b1183d",
+    "/css/compiled/lockouts.css": "/css/compiled/lockouts.css?id=34297be117134b441165",
+    "/js/compiled/common.js": "/js/compiled/common.js?id=50daf88d736064a705c2",
+    "/js/compiled/index.js": "/js/compiled/index.js?id=0b70c3d94075d8d7b3fd",
+    "/js/compiled/lockouts.js": "/js/compiled/lockouts.js?id=4830546ecfc473b512d1",
     "/js/compiled/post.js": "/js/compiled/post.js?id=bcb161e39d4047eaf38e",
-    "/js/compiled/raid_stats.js": "/js/compiled/raid_stats.js?id=3ef6d28bb4240a82e59a",
+    "/js/compiled/raid_stats.js": "/js/compiled/raid_stats.js?id=b44c2c7ed9f6fa9b1c20",
     "/js/compiled/weapon_stats.js": "/js/compiled/weapon_stats.js?id=9d0148c0bf0b72de3eaf",
     "/js/compiled/pve_stats.js": "/js/compiled/pve_stats.js?id=a11aea71114f6e997a48",
     "/js/compiled/pvp_stats.js": "/js/compiled/pvp_stats.js?id=b36465f043872fec4777",
