--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,31 @@
 {
+    "/css/fonts/rpgawesome-webfont.eot": "/css/fonts/rpgawesome-webfont.eot?id=bc823b99ea19612ea4c2",
+    "/css/fonts/rpgawesome-webfont.svg": "/css/fonts/rpgawesome-webfont.svg?id=c243adb601cb0e965344",
+    "/css/fonts/rpgawesome-webfont.ttf": "/css/fonts/rpgawesome-webfont.ttf?id=f01f633236d03b37965d",
+    "/css/fonts/rpgawesome-webfont.woff": "/css/fonts/rpgawesome-webfont.woff?id=5e7b61da09ad4f91a376",
+    "/css/webfonts/fa-brands-400.eot": "/css/webfonts/fa-brands-400.eot?id=80f0a37d8256bee22b96",
+    "/css/webfonts/fa-brands-400.svg": "/css/webfonts/fa-brands-400.svg?id=073c2f3ce60eaf69cc27",
+    "/css/webfonts/fa-brands-400.ttf": "/css/webfonts/fa-brands-400.ttf?id=bb0db3f596eb4c6f1a9d",
+    "/css/webfonts/fa-brands-400.woff": "/css/webfonts/fa-brands-400.woff?id=33c4795de2cc2ec48c5c",
+    "/css/webfonts/fa-brands-400.woff2": "/css/webfonts/fa-brands-400.woff2?id=b6018e083f8265718830",
+    "/css/webfonts/fa-regular-400.eot": "/css/webfonts/fa-regular-400.eot?id=1bfe02136de8da9cab70",
+    "/css/webfonts/fa-regular-400.svg": "/css/webfonts/fa-regular-400.svg?id=8fdea4e89ac405d9f8db",
+    "/css/webfonts/fa-regular-400.ttf": "/css/webfonts/fa-regular-400.ttf?id=599636c98194aacbcb75",
+    "/css/webfonts/fa-regular-400.woff": "/css/webfonts/fa-regular-400.woff?id=0b96edd8656e9b8a55dd",
+    "/css/webfonts/fa-regular-400.woff2": "/css/webfonts/fa-regular-400.woff2?id=47a77ebc8f9e4055db60",
+    "/css/webfonts/fa-solid-900.eot": "/css/webfonts/fa-solid-900.eot?id=0e5f664a789c7c78ab07",
+    "/css/webfonts/fa-solid-900.svg": "/css/webfonts/fa-solid-900.svg?id=b557f56e367e59344ca9",
+    "/css/webfonts/fa-solid-900.ttf": "/css/webfonts/fa-solid-900.ttf?id=fc1a4ce9efbb741f3ae7",
+    "/css/webfonts/fa-solid-900.woff": "/css/webfonts/fa-solid-900.woff?id=ebf5a871266ad037198c",
+    "/css/webfonts/fa-solid-900.woff2": "/css/webfonts/fa-solid-900.woff2?id=8602cc8d0e0ae49146e9",
     "/css/compiled/common.css": "/css/compiled/common.css?id=fb1721374ea96e48cc80",
     "/css/compiled/post.css": "/css/compiled/post.css?id=4002dbcd64c42ee1508f",
     "/css/compiled/store.css": "/css/compiled/store.css?id=e87f4df40421c5b1183d",
-    "/css/compiled/lockouts.css": "/css/compiled/lockouts.css?id=34297be117134b441165",
+    "/css/compiled/clan.css": "/css/compiled/clan.css?id=929fcf12f0f858de5d47",
     "/js/compiled/common.js": "/js/compiled/common.js?id=50daf88d736064a705c2",
-    "/js/compiled/index.js": "/js/compiled/index.js?id=02697796de7df12ebb8e",
+    "/js/compiled/index.js": "/js/compiled/index.js?id=80b4ca432aa0c9e987a7",
     "/js/compiled/lockouts.js": "/js/compiled/lockouts.js?id=4830546ecfc473b512d1",
+    "/js/compiled/seals.js": "/js/compiled/seals.js?id=0d8309df851b9fc13fbb",
     "/js/compiled/post.js": "/js/compiled/post.js?id=bcb161e39d4047eaf38e",
     "/js/compiled/raid_stats.js": "/js/compiled/raid_stats.js?id=b44c2c7ed9f6fa9b1c20",
     "/js/compiled/weapon_stats.js": "/js/compiled/weapon_stats.js?id=9d0148c0bf0b72de3eaf",
