--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -21,11 +21,12 @@
     "/css/compiled/common.css": "/css/compiled/common.css?id=fb1721374ea96e48cc80",
     "/css/compiled/post.css": "/css/compiled/post.css?id=4002dbcd64c42ee1508f",
     "/css/compiled/store.css": "/css/compiled/store.css?id=e87f4df40421c5b1183d",
-    "/css/compiled/clan.css": "/css/compiled/clan.css?id=929fcf12f0f858de5d47",
+    "/css/compiled/clan.css": "/css/compiled/clan.css?id=5528cb0a23bfcd79f4d9",
     "/js/compiled/common.js": "/js/compiled/common.js?id=50daf88d736064a705c2",
     "/js/compiled/index.js": "/js/compiled/index.js?id=80b4ca432aa0c9e987a7",
     "/js/compiled/lockouts.js": "/js/compiled/lockouts.js?id=4830546ecfc473b512d1",
-    "/js/compiled/seals.js": "/js/compiled/seals.js?id=0d8309df851b9fc13fbb",
+    "/js/compiled/seals.js": "/js/compiled/seals.js?id=da793a85617824e85740",
+    "/js/compiled/sealProgression.js": "/js/compiled/sealProgression.js?id=3d64e873578e1070d0a6",
     "/js/compiled/post.js": "/js/compiled/post.js?id=bcb161e39d4047eaf38e",
     "/js/compiled/raid_stats.js": "/js/compiled/raid_stats.js?id=b44c2c7ed9f6fa9b1c20",
     "/js/compiled/weapon_stats.js": "/js/compiled/weapon_stats.js?id=9d0148c0bf0b72de3eaf",
