bug fix - reckoner seal missing

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,8 @@
 {
+    "/css/autoprefix/style.css": "/css/autoprefix/style.css?id=25a0f60dc00701fd0ffa",
+    "/css/compiled/post.css": "/css/compiled/post.css?id=0ecd458d3bc388e6dc06",
+    "/css/compiled/store.css": "/css/compiled/store.css?id=d907f3e3cb0e9d22a3a5",
+    "/css/compiled/clan.css": "/css/compiled/clan.css?id=bc8285bde65be9b255fd",
     "/css/fonts/rpgawesome-webfont.eot": "/css/fonts/rpgawesome-webfont.eot?id=bc823b99ea19612ea4c2",
     "/css/fonts/rpgawesome-webfont.svg": "/css/fonts/rpgawesome-webfont.svg?id=c243adb601cb0e965344",
     "/css/fonts/rpgawesome-webfont.ttf": "/css/fonts/rpgawesome-webfont.ttf?id=f01f633236d03b37965d",
@@ -18,19 +22,18 @@
     "/css/webfonts/fa-solid-900.ttf": "/css/webfonts/fa-solid-900.ttf?id=fc1a4ce9efbb741f3ae7",
     "/css/webfonts/fa-solid-900.woff": "/css/webfonts/fa-solid-900.woff?id=ebf5a871266ad037198c",
     "/css/webfonts/fa-solid-900.woff2": "/css/webfonts/fa-solid-900.woff2?id=8602cc8d0e0ae49146e9",
-    "/css/compiled/common.css": "/css/compiled/common.css?id=b5009ea59222ed6b5559",
-    "/css/compiled/post.css": "/css/compiled/post.css?id=4002dbcd64c42ee1508f",
-    "/css/compiled/store.css": "/css/compiled/store.css?id=e87f4df40421c5b1183d",
-    "/css/compiled/clan.css": "/css/compiled/clan.css?id=5528cb0a23bfcd79f4d9",
-    "/js/compiled/common.js": "/js/compiled/common.js?id=50daf88d736064a705c2",
+    "/css/compiled/common.css": "/css/compiled/common.css?id=a04e31880237af594eeb",
+    "/js/compiled/common.js": "/js/compiled/common.js?id=13d0ba867c2c1c9841f9",
     "/js/compiled/index.js": "/js/compiled/index.js?id=80b4ca432aa0c9e987a7",
-    "/js/compiled/lockouts.js": "/js/compiled/lockouts.js?id=51be7e29908106250b3e",
-    "/js/compiled/seals.js": "/js/compiled/seals.js?id=da793a85617824e85740",
+    "/js/compiled/glory_cheese.js": "/js/compiled/glory_cheese.js?id=d037b203c82a308fe3fd",
+    "/js/compiled/lockouts.js": "/js/compiled/lockouts.js?id=d939b5453c15d736eeb4",
+    "/js/compiled/seals.js": "/js/compiled/seals.js?id=8586755a38b76bfb306b",
+    "/js/compiled/roster.js": "/js/compiled/roster.js?id=bc145867dd558fdc1ca8",
     "/js/compiled/sealProgression.js": "/js/compiled/sealProgression.js?id=63461eef7d70c692d1bd",
     "/js/compiled/post.js": "/js/compiled/post.js?id=bcb161e39d4047eaf38e",
-    "/js/compiled/raid_stats.js": "/js/compiled/raid_stats.js?id=b44c2c7ed9f6fa9b1c20",
-    "/js/compiled/weapon_stats.js": "/js/compiled/weapon_stats.js?id=9d0148c0bf0b72de3eaf",
-    "/js/compiled/pve_stats.js": "/js/compiled/pve_stats.js?id=a11aea71114f6e997a48",
-    "/js/compiled/pvp_stats.js": "/js/compiled/pvp_stats.js?id=b36465f043872fec4777",
-    "/js/compiled/gambit_stats.js": "/js/compiled/gambit_stats.js?id=738597310c82ae238ff0"
+    "/js/compiled/raid_stats.js": "/js/compiled/raid_stats.js?id=1801837f8321ade6d196",
+    "/js/compiled/weapon_stats.js": "/js/compiled/weapon_stats.js?id=992ed840520069fb4b8a",
+    "/js/compiled/pve_stats.js": "/js/compiled/pve_stats.js?id=9093937f968099d039f1",
+    "/js/compiled/pvp_stats.js": "/js/compiled/pvp_stats.js?id=effaf0d85dd20dcb180a",
+    "/js/compiled/gambit_stats.js": "/js/compiled/gambit_stats.js?id=679ad098c589c5f31ef0"
 }
