--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,8 @@
 {
-    "/css/autoprefix/style.css": "/css/autoprefix/style.css?id=967ab2f0831fdd278ac9",
-    "/css/compiled/post.css": "/css/compiled/post.css?id=c5209a2042050fe2fed0",
-    "/css/compiled/store.css": "/css/compiled/store.css?id=e87f4df40421c5b1183d",
-    "/css/compiled/clan.css": "/css/compiled/clan.css?id=5528cb0a23bfcd79f4d9",
+    "/css/autoprefix/style.css": "/css/autoprefix/style.css?id=d14426a1572c73f57b4a",
+    "/css/compiled/post.css": "/css/compiled/post.css?id=710839148af9dda7e0ae",
+    "/css/compiled/store.css": "/css/compiled/store.css?id=d907f3e3cb0e9d22a3a5",
+    "/css/compiled/clan.css": "/css/compiled/clan.css?id=bc8285bde65be9b255fd",
     "/css/fonts/rpgawesome-webfont.eot": "/css/fonts/rpgawesome-webfont.eot?id=bc823b99ea19612ea4c2",
     "/css/fonts/rpgawesome-webfont.svg": "/css/fonts/rpgawesome-webfont.svg?id=c243adb601cb0e965344",
     "/css/fonts/rpgawesome-webfont.ttf": "/css/fonts/rpgawesome-webfont.ttf?id=f01f633236d03b37965d",
@@ -22,14 +22,15 @@
     "/css/webfonts/fa-solid-900.ttf": "/css/webfonts/fa-solid-900.ttf?id=fc1a4ce9efbb741f3ae7",
     "/css/webfonts/fa-solid-900.woff": "/css/webfonts/fa-solid-900.woff?id=ebf5a871266ad037198c",
     "/css/webfonts/fa-solid-900.woff2": "/css/webfonts/fa-solid-900.woff2?id=8602cc8d0e0ae49146e9",
-    "/css/compiled/common.css": "/css/compiled/common.css?id=8cf0bbd96300f8cbf8ec",
+    "/css/compiled/common.css": "/css/compiled/common.css?id=df5371bd49a84d1505bc",
     "/js/compiled/common.js": "/js/compiled/common.js?id=53df021280f40a0f76c9",
     "/js/compiled/index.js": "/js/compiled/index.js?id=9641b636234fa48db251",
     "/js/compiled/glory_cheese.js": "/js/compiled/glory_cheese.js?id=d037b203c82a308fe3fd",
     "/js/compiled/lockouts.js": "/js/compiled/lockouts.js?id=d7336db6e9a4e24359ed",
-    "/js/compiled/seals.js": "/js/compiled/seals.js?id=828571311fb045a1b7ee",
+    "/js/compiled/seals.js": "/js/compiled/seals.js?id=27f980dab6528b671871",
     "/js/compiled/roster.js": "/js/compiled/roster.js?id=02649b6211d7409cac70",
     "/js/compiled/sealProgression.js": "/js/compiled/sealProgression.js?id=624db4c7000e0e2f2ee5",
+    "/js/compiled/exotics.js": "/js/compiled/exotics.js?id=e2ec95e48ddbb2743bd7",
     "/js/compiled/post.js": "/js/compiled/post.js?id=bcb161e39d4047eaf38e",
     "/js/compiled/raid_stats.js": "/js/compiled/raid_stats.js?id=bc8a955c7402df0f2219",
     "/js/compiled/weapon_stats.js": "/js/compiled/weapon_stats.js?id=d2477e7054ae25f0710e",
