front page update

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,9 @@
 {
-    "/css/autoprefix/style.css": "/css/autoprefix/style.css?id=d14426a1572c73f57b4a",
+    "/css/autoprefix/style.css": "/css/autoprefix/style.css?id=d887516e8b40c2523f1a",
     "/css/compiled/post.css": "/css/compiled/post.css?id=710839148af9dda7e0ae",
     "/css/compiled/store.css": "/css/compiled/store.css?id=d907f3e3cb0e9d22a3a5",
     "/css/compiled/clan.css": "/css/compiled/clan.css?id=bc8285bde65be9b255fd",
+    "/css/compiled/stats.css": "/css/compiled/stats.css?id=7f0d48190ed53f4bcd01",
     "/css/fonts/rpgawesome-webfont.eot": "/css/fonts/rpgawesome-webfont.eot?id=bc823b99ea19612ea4c2",
     "/css/fonts/rpgawesome-webfont.svg": "/css/fonts/rpgawesome-webfont.svg?id=c243adb601cb0e965344",
     "/css/fonts/rpgawesome-webfont.ttf": "/css/fonts/rpgawesome-webfont.ttf?id=f01f633236d03b37965d",
@@ -22,11 +23,11 @@
     "/css/webfonts/fa-solid-900.ttf": "/css/webfonts/fa-solid-900.ttf?id=fc1a4ce9efbb741f3ae7",
     "/css/webfonts/fa-solid-900.woff": "/css/webfonts/fa-solid-900.woff?id=ebf5a871266ad037198c",
     "/css/webfonts/fa-solid-900.woff2": "/css/webfonts/fa-solid-900.woff2?id=8602cc8d0e0ae49146e9",
-    "/css/compiled/common.css": "/css/compiled/common.css?id=df5371bd49a84d1505bc",
+    "/css/compiled/common.css": "/css/compiled/common.css?id=e9ca26a3dadd53bf67bb",
     "/js/compiled/common.js": "/js/compiled/common.js?id=53df021280f40a0f76c9",
-    "/js/compiled/index.js": "/js/compiled/index.js?id=3ca385d4ee6c1c19c7d3",
+    "/js/compiled/index.js": "/js/compiled/index.js?id=da6586835b32a75e7273",
     "/js/compiled/glory_cheese.js": "/js/compiled/glory_cheese.js?id=d037b203c82a308fe3fd",
-    "/js/compiled/lockouts.js": "/js/compiled/lockouts.js?id=d7336db6e9a4e24359ed",
+    "/js/compiled/lockouts.js": "/js/compiled/lockouts.js?id=846b0e1386b75759bf3e",
     "/js/compiled/seals.js": "/js/compiled/seals.js?id=27f980dab6528b671871",
     "/js/compiled/roster.js": "/js/compiled/roster.js?id=02649b6211d7409cac70",
     "/js/compiled/sealProgression.js": "/js/compiled/sealProgression.js?id=624db4c7000e0e2f2ee5",
