--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "anhskohbo/no-captcha": "^3.0",
         "drupol/phpermutations": "^1.3",
         "fabpot/goutte": "^3.2",
         "fideloper/proxy": "^4.0",
