--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
         "anhskohbo/no-captcha": "^3.0",
         "drupol/phpermutations": "^1.3",
         "fabpot/goutte": "^3.2",
+        "facade/ignition": "^1.8",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "halaxa/json-machine": "^0.3.2",
-        "jgrossi/corcel": "^2.8",
-        "laravel/framework": "5.8.*",
+        "jgrossi/corcel": "^3.0.0",
+        "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "nesbot/carbon": "^2.18",
         "predis/predis": "^1.1",
