--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "anhskohbo/no-captcha": "^3.0",
+        "corcel/acf": "^2.0",
         "drupol/phpermutations": "^1.3",
         "fabpot/goutte": "^3.2",
         "facade/ignition": "^1.8",
