Moved weeklies to dedicated page

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -25,12 +25,13 @@
     "/css/webfonts/fa-solid-900.woff2": "/css/webfonts/fa-solid-900.woff2?id=743423887f20ef541bdf",
     "/css/compiled/common.css": "/css/compiled/common.css?id=49296d00ce1692188b2a",
     "/js/compiled/common.js": "/js/compiled/common.js?id=b5c102ecd4e4e1e62b0c",
-    "/js/compiled/index.js": "/js/compiled/index.js?id=25d292663342a2e00c00",
+    "/js/compiled/index.js": "/js/compiled/index.js?id=b3ff936efd03539bb2a0",
+    "/js/compiled/weeklies.js": "/js/compiled/weeklies.js?id=8154a51d6d883a7d50ad",
     "/js/compiled/glory_cheese.js": "/js/compiled/glory_cheese.js?id=c27656de95999d298eda",
     "/js/compiled/lockouts.js": "/js/compiled/lockouts.js?id=df2d7f90665408d4307d",
     "/js/compiled/seals.js": "/js/compiled/seals.js?id=ea7458d46a174fee0956",
     "/js/compiled/roster.js": "/js/compiled/roster.js?id=2d829fc14f430169dbba",
-    "/js/compiled/sealProgression.js": "/js/compiled/sealProgression.js?id=b83449949d58998e8b4b",
+    "/js/compiled/sealProgression.js": "/js/compiled/sealProgression.js?id=9b5ae4fc167a4c263f7c",
     "/js/compiled/exotics.js": "/js/compiled/exotics.js?id=6a41ce734b0fa140512f",
     "/js/compiled/member_exotics.js": "/js/compiled/member_exotics.js?id=b983c786afde01718ed9",
     "/js/compiled/post.js": "/js/compiled/post.js?id=181b69fcb49559dae3df",
