--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "animate.css": "^3.7.2",
         "flag-icon-css": "^3.4.5",
         "lightbox2": "^2.11.1",
+        "masonry-layout": "^4.2.2",
         "moment": "^2.24.0",
         "rpg-awesome": "^0.2.0",
         "tabulator-tables": "^4.5.2",
