--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "predis/predis": "^1.1",
         "spatie/laravel-sitemap": "^5.3",
         "stripe/stripe-php": "^6.37",
-        "thunderer/shortcode": "^0.6.5"
+        "thunderer/shortcode": "^0.6.5",
+        "symfony/http-foundation": "4.4.7"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
