--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "axios": "^0.18.1",
         "bootstrap": "^4.4.1",
         "cross-env": "^5.2.1",
-        "jquery": "^3.5.0",
+        "jquery": "3.4.1",
         "laravel-mix": "^4.1.4",
         "lodash": "^4.17.15",
         "popper.js": "^1.16.1",
@@ -34,6 +34,7 @@
         "moment": "^2.24.0",
         "rpg-awesome": "^0.2.0",
         "tabulator-tables": "^4.6.2",
-        "vanilla-lazyload": "^12.5.1"
+        "vanilla-lazyload": "^12.5.1",
+        "websocket-extensions": ">=0.1.4"
     }
 }
