--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/css/autoprefix/style.css": "/css/autoprefix/style.css?id=7dfb80ac4dbb18036d16",
+    "/css/autoprefix/style.css": "/css/autoprefix/style.css?id=223cc1a638b90d7ddb04",
     "/css/compiled/post.css": "/css/compiled/post.css?id=d23340e68fd561c4ecdf",
     "/css/compiled/store.css": "/css/compiled/store.css?id=d907f3e3cb0e9d22a3a5",
     "/css/compiled/clan.css": "/css/compiled/clan.css?id=bc8285bde65be9b255fd",
@@ -23,8 +23,9 @@
     "/css/webfonts/fa-solid-900.ttf": "/css/webfonts/fa-solid-900.ttf?id=ab29c148444e29405ca6",
     "/css/webfonts/fa-solid-900.woff": "/css/webfonts/fa-solid-900.woff?id=16f52d36c2500dcec3c1",
     "/css/webfonts/fa-solid-900.woff2": "/css/webfonts/fa-solid-900.woff2?id=a67df16a6365c3607222",
-    "/css/compiled/common.css": "/css/compiled/common.css?id=3586ebbef5d320485cbd",
-    "/js/compiled/common.js": "/js/compiled/common.js?id=48f26f3b4e942a53afea",
+    "/js/compiled/bootstrap.js.map": "/js/compiled/bootstrap.js.map?id=a73716a975665ff6e2b8",
+    "/css/compiled/common.css": "/css/compiled/common.css?id=ba132dcfc6210d1dc8a4",
+    "/js/compiled/common.js": "/js/compiled/common.js?id=6c56200fa94171b67e3a",
     "/js/compiled/index.js": "/js/compiled/index.js?id=0aace7762961dbff1be0",
     "/js/compiled/weeklies.js": "/js/compiled/weeklies.js?id=c7b1c1fd24fa6884fdce",
     "/js/compiled/glory_cheese.js": "/js/compiled/glory_cheese.js?id=8af2d2b5a8fb69ad7953",
