--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "masonry-layout": "^4.2.2",
         "minimist": ">=1.2.2",
         "moment": "^2.27.0",
+        "node-forge": ">=0.10.0",
         "rpg-awesome": "^0.2.0",
         "tabulator-tables": "^4.7.0",
         "vanilla-lazyload": "^12.5.1",
