--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "rpg-awesome": "^0.2.0",
         "tabulator-tables": "^4.7.0",
         "vanilla-lazyload": "^12.5.1",
-        "websocket-extensions": ">=0.1.4"
+        "websocket-extensions": ">=0.1.4",
+        "object-path": ">=0.11.5"
     }
 }
