--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.13.1",
-        "axios": "^0.18.1",
+        "axios": "^0.21.1",
         "bootstrap": "^4.5.0",
         "cross-env": "^5.2.1",
         "jquery": ">=3.5.0",
-        "laravel-mix": "^5.0.5",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.26.9",
-        "sass-loader": "^7.3.1",
+        "postcss-loader": "^5.0.0",
+        "resolve-url-loader": "^3.1.3",
         "vue": "^2.6.11"
     },
     "dependencies": {
@@ -28,15 +24,17 @@
         "animate.css": "^3.7.2",
         "flag-icon-css": "^3.5.0",
         "kind-of": ">=6.0.3",
+        "laravel-mix": "^6.0.18",
         "lightbox2": "^2.11.1",
         "masonry-layout": "^4.2.2",
         "minimist": ">=1.2.2",
         "moment": "^2.27.0",
         "node-forge": ">=0.10.0",
+        "object-path": ">=0.11.5",
         "rpg-awesome": "^0.2.0",
         "tabulator-tables": "^4.7.0",
         "vanilla-lazyload": "^12.5.1",
-        "websocket-extensions": ">=0.1.4",
-        "object-path": ">=0.11.5"
+        "webpack": "^5.36.2",
+        "websocket-extensions": ">=0.1.4"
     }
 }
